@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-10T16:34:08Z",
-  "count_outdated" : 36,
-  "uniques_outdated" : 8,
-  "count" : 38,
-  "uniques" : 9,
+  "timestamp" : "2022-06-28T02:04:31Z",
+  "count_outdated" : 38,
+  "uniques_outdated" : 9,
+  "count" : 39,
+  "uniques" : 10,
   "views" : [
     {
-      "timestamp": "2022-06-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "timestamp": "2022-06-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
