@@ -1,3 +1,10 @@
+2022-06-28T02:04:31Z:
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 8 36 / 9 38
+* notice: next accum: outdated-unq outdated-all / unq all: 9 38 / 10 39
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-06-09] / [2022-06-27]
+
 2022-06-10T16:34:08Z:
 * notice: last 14d: unq all: 1 2
 * notice: prev accum: outdated-unq outdated-all / unq all: 7 35 / 9 38
